--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
     </section>
     <!--wrap-1 ends-->
     <!--over wrap-1-->
-    <section class="overwrap-1 mt-5">
+    <!-- <section class="overwrap-1 mt-5">
         <div class="overlay">
             <div class="container-md py-5 ">
                 <div class="row pt-4">
@@ -78,10 +78,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!--over wrap-1 ends-->
 
-    <section class="newswrap-1 my-5">
+    <!-- <section class="newswrap-1 my-5">
         <div class="container-md">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 col-lg-8">
@@ -155,8 +155,8 @@
                     </div>
 
 
-                    <!-- pagination-2 -->
-                    <div class="pagination">
+                   pagination-2 -->
+                    <!-- <div class="pagination">
                         <div class="container-md">
                             <div class="row">
                                 <ul class="pagination  my-5">
@@ -165,13 +165,13 @@
                                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                                     <li class="page-item"><a class="page-link" href="#">Next</a></li>
                                 </ul>
-                                <!-- pagination end -->
-                            </div>
+                                pagination end -->
+                            <!-- </div>
                         </div>
                     </div>
 
 
-                </div>
+                </div> --> 
 
 
 
@@ -179,7 +179,7 @@
 
 
 
-                <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                <!-- <div class="col-12 col-sm-12 col-md-12 col-lg-4">
                     <div class="recnewssection">
                         <div class="heading mb-4">
                             <h3>Recent News</h3>
@@ -286,7 +286,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
@@ -301,11 +301,13 @@
 
 
 
-
-
-
-
-
+ 
+ <center>
+    <h1 style="color: green">GeeksforGeeks</h1>
+    <embed src="img/Wayanadphotoinitial.pdf"
+           width="1000"
+           height="1000">
+</center>
 
 
    <!--wrap-3 starts-->
@@ -315,7 +317,7 @@
         <div class="row">
             <div class="col">
                 <div class="inner text-white float-left">
-                    <h2 >MAKING DREAMS COME To LIFE</h2>
+                    <h2 >MAKING DREAMS COME TO LIFE</h2>
                     <p >Quality is what we pursue, We know what we do</p>
                 </div>
                 <!-- <div class="quote-btn float-right mt-4">
