--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
                 <div class="carousel-item active">
                     <img src="./img/caraousalimg1.jpg" alt="Los Angeles" width="1100" height="500">
                     <div class="carousel-caption">
-                        <h2>LSS</h2>
-                        <p>We had such a great time in LA!</p>
+                        <h2>James</h2>
+                        <p>We had such a great time !</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/caraousalimg2.jpg" alt="Chicago" width="1100" height="500">
                     <div class="carousel-caption">
-                        <h2>SA</h2>
-                        <p>Thank you, Chicago!</p>
+                        <h2>SAM</h2>
+                        <p>Thank you!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
